Fix focus clipping

--- a/styles/expanse.css
+++ b/styles/expanse.css
@@ -421,7 +421,7 @@ blockquote {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 50px;
+    height: 55px;
     width: calc(48% - 2px);
     margin: 0px 5px 10px 5px;
     padding: 0;
